# Tooldex

./: .gitignore  404.html  CONTRIBUTING.md  OVERVIEW.md  README.dev.md  README.md  index.html  mkdocs.yml  package-lock.json  pericat.yml  perimeter.yml  pyproject.toml  requirements.txt  sitemap.xml  toolpool.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  tests.yml
docs/: index.md
pericat/: OVERVIEW.md  _cli_output.py  cli.py
pericat/api/: app.py
pericat/api/routers/: agents.py  analysis.py  health.py  policy.py  servers.py
pericat/core/: models.py  parser.py
pericat/core/discovery/: __init__.py  _parsers.py  _paths.py  config_detector.py  mcp_client.py  results.py  to_manifest.py  tool_discovery.py
pericat/core/models/: __init__.py  agent.py  agent_models.py  conflict.py  conflict_models.py  file_access.py  manifest.py  mcp_server.py  metadata.py  observatory.py  policy.py  policy_engine.py  root_manifest.py  server.py  tool.py  tool_permissions.py
pericat/core/parsers/: loader.py  merger.py  orchestration.py  parser.py  transformers.py
pericat/ui/: index.html  package-lock.json  package.json  vite.config.js
pericat/ui/src/: api.js  constants.js  index.css
perimeter/: cli.py
perimeter/api/: app.py
perimeter/api/routers/: agents.py  health.py  policy.py  servers.py
perimeter/core/: models.py  parser.py
perimeter/ui/: index.html  package-lock.json  package.json
perimeter/ui/src/: api.js
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_api_servers.py  test_config_detector.py  test_models.py  test_parser_singleton.py  test_parsers.py  test_paths.py  test_readers.py  test_results.py  test_to_manifest.py
tooldex/: __init__.py  _cli_output.py  cli.py
tooldex/api/: app.py
tooldex/api/routers/: files.py  health.py  servers.py
tooldex/core/discovery/: __init__.py  _parsers.py  (+11 more)
tooldex/ui/: index.html  package-lock.json  package.json
toolpool/: OVERVIEW.md  __init__.py  _cli_output.py  cli.py
toolpool/api/: app.py
toolpool/ui/: index.html  package-lock.json  package.json
(+57 files in other folders)
