[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perimeter"
version = "0.1.0"
description = "AI Agent Permission Observatory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "mcp", "permissions", "observability"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "watchfiles>=0.21.0",
]

[project.scripts]
perimeter = "perimeter.cli:main"

[tool.hatch.build.targets.wheel]
include = ["perimeter/**"]