[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tooldex"
version = "0.1.0"
description = "AI Agent Permission Observatory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "mcp", "permissions", "observability"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "watchfiles>=0.21.0",
    "mcp>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
tooldex = "tooldex.cli:main"

[tool.hatch.build.targets.wheel]
include = ["tooldex/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]